# c2c-search

./: .gitignore  pyproject.toml
c2c_data_loader/: __init__.py
c2c_search/: __init__.py  camptocamp.py  config.py  pinecone.py  types.py
