[tool.poetry]
name = "c2c-search"
version = "0.1.0"
description = ""
authors = ["Nicolas Ngomai <nicolas.ngomai@gmail.com>"]
readme = "README.md"
packages = [{include = "c2c_search"}]

[tool.poetry.dependencies]
python = "^3.11"
pinecone-client = "^5.0.1"
sentence-transformers = "^3.0.1"
numpy = "^2.1.1"
requests = "^2.32.3"
dacite = "^1.8.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
update-data = "c2c_search:update_raw_data"
update-index = "c2c_search:update_index"
search = "c2c_search:search"
debug = "c2c_search:debug"
